--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,9 @@ body {
 }
 
 .attribution {
-  font-size: 11px;
+  font-size: 0.688rem;
   text-align: center;
+  width: 70vw;
 }
 
 .attribution a {
@@ -28,30 +29,26 @@ body {
   background-color: hsl(0, 0%, 100%);
   display: grid;
   
-  grid-template-columns: repeat(
-    auto-fit,
-    minmax(min(25vw,100%), 1fr)
-  );
+  grid-template-columns: 70vw;
   border-radius: 20px;
-  width: 50vw;
-  height: 60vh;
   margin: 20px;
 }
 
-.card > img {
+.image-desktop{
+  display: none;
+}
+
+.image-mobile {
   display: block;
   object-fit: cover;
-  height: 60vh;
-  min-height: 20vh;
-  width: 25vw;
-  border-radius: 20px 0px 0px 20px;
+  width: 100%;
+  border-radius: 20px 20px 0px 0px;
 }
 
 .card-information {
   padding: 0.5rem 3.125rem 3.125rem;
-  height: 60vh;
-  min-height: 0px;
-  min-width: 0px;
+  width: 100%;
+
 }
 
 .add-cart {
@@ -107,3 +104,37 @@ body {
     right: 10px;
 }
 
+@media (min-width: 1200px) {
+  .image-mobile{
+    display: none;
+  }
+  .card {
+    background-color: hsl(0, 0%, 100%);
+    display: grid;
+    
+    grid-template-areas: "img info";
+    grid-template-columns: 40% 60%;
+    height: 60vh;
+    width: 50%;
+    border-radius: 20px;
+    margin: 20px;
+  }
+  
+  .image-desktop {
+    grid-area: img;
+    display: block;
+    object-fit: cover;
+    height: 60vh;
+    min-width: 0;
+    border-radius: 20px 0px 0px 20px;
+  }
+
+  .card-information {
+    grid-area: info;
+    padding: 0.5rem 3.125rem 3.125rem;
+    
+   
+  }
+
+  
+}
